[package]
name = "github_contributions_widget"
version = "0.1.6"
edition = "2021"
authors = ["oxwazz <muhammad.rahmahalim@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
worker-macros = "0.5.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json"] }
timeago = "0.4.2"
chrono = "0.4.38"
base64 = "0.22.1"
html-escape = "0.2.13"
